--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,8 +6,8 @@
 <body>
 <div class="container">
     <h2>AI Volunteer Matching</h2>
-    <a href="templates/login.html">Login</a> |
-    <a href="templates/register.html">Register</a>
+    <a href="login.html">Login</a> |
+    <a href="register.html">Register</a>
 </div>
 </body>
 </html>
